# LbDevTools

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  CHANGELOG.md  README.rst  setup.cfg  setup.py  update_clang_format.sh  update_cmake_modules.sh
LbDevTools/: CopyrightCheck.py  CopyrightHandling.py  GitTools.py  Indexing.py  ProjectDev.py  ProjectInit.py  ReleaseNotes.py  SourceTools.py  UserProject.py  __init__.py
LbDevTools/GitTools/: __init__.py  checkout.py  clone_pkg.py  common.py  push.py  reset_mtime.py  use.py
LbDevTools/data/: Makefile-cmake.mk  Makefile-cmt-common.mk  Makefile-cmt.mk  Makefile-common.mk  default.clang-format  toolchain.cmake
LbDevTools/data/cmake/: BinaryTagUtils.cmake  CTestXML2HTML  GangaTools.cmake  GaudiBuildFlags.cmake  GaudiDefaultToolchain.cmake  GaudiProjectConfig.cmake  GaudiToolchainMacros.cmake  (+8 more)
LbDevTools/shell_completion/: bash.py
LbDevTools/templates/: CMakeLists.txt  release_notes_template.md  searchPath.py
LbDevTools/templates/lb-dev/: CMakeLists.txt  Makefile  build.conf  run  searchPath.py  toolchain.cmake
LbDevTools/templates/lb-dev-legacy/: Makefile  run  toolchain.cmake
LbDevTools/templates/lb-dev/cmt/: project.cmt  requirements_
LbDevTools/tests/: test_copyright.py  test_release_notes.py  test_scan_dict_deps.py  test_user_project.py
LbRelease/SoftConfDB/: SoftConfDB.py
LbUtils/tests/: test_script.py
rpm/: CompilerWrappers.spec
shell-completion/bash/: LbDevTools_git_commands
shell-completion/zsh/: _cmakeflags  _git-lb-checkout  _git-lb-push  _git-lb-use  _lb-dev  _ninjaflags
(+22 files in other folders)
